WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276217
[svg] fix smart pointer warnings introduced in
280621@main
https://bugs.webkit.org/show_bug.cgi?id=276217
Summary
[svg] fix smart pointer warnings introduced in 280621@main
Antoine Quint
Reported
2024-07-03 23:42:20 PDT
The fix for
bug 272509
,
280621@main
, introduced some smart pointer warnings.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-03 23:42:35 PDT
<
rdar://problem/131103106
>
Antoine Quint
Comment 2
2024-07-03 23:43:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30484
EWS
Comment 3
2024-07-08 13:37:48 PDT
Committed
280751@main
(db4bb37b38dc): <
https://commits.webkit.org/280751@main
> Reviewed commits have been landed. Closing PR #30484 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug