[svg] fix smart pointer warnings introduced in 280621@main https://bugs.webkit.org/show_bug.cgi?id=276217 rdar://131103106

Reviewed by Charlie Wolfe.

* Source/WebCore/svg/SVGPathElement.cpp:
(WebCore::SVGPathElement::path const):
(WebCore::SVGPathElement::collectPresentationalHintsForAttribute):

Canonical link: https://commits.webkit.org/280751@main